about: horizontal scroll fixed

--- a/static/styles/less/about.less
+++ b/static/styles/less/about.less
@@ -21,8 +21,8 @@
 
     @media(min-width: @xs-breakpoint) {
         box-shadow: 0 -5px 6px #0005, 0 5px 5px #0005;
-        margin-left: -26px;
-        margin-right: -26px;
+        margin-left: -13px;
+        margin-right: -13px;
     }
 
     @media(min-width: @lg-breakpoint) {
